--- a/Listy/server/package.json
+++ b/Listy/server/package.json
@@ -16,6 +16,13 @@
     "nodemon": "^1.17.2"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "helmet": "^3.12.0",
+    "jwt-simple": "^0.5.1",
+    "morgan": "^1.9.0",
+    "rethinkdb": "^2.3.3"
   }
 }
