--- a/Listy/server/package.json
+++ b/Listy/server/package.json
@@ -23,6 +23,7 @@
     "helmet": "^3.12.0",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.9.0",
-    "rethinkdb": "^2.3.3"
+    "rethinkdb": "^2.3.3",
+    "rethinkdb-init": "^0.2.2"
   }
 }
