--- a/Listy/client/.gitignore
+++ b/Listy/client/.gitignore
@@ -1,15 +1,12 @@
+.DS_Store
 node_modules/
-dist/
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.env
-!/.gitignore
 
 # Editor directories and files
 .idea
-.vscode
-.vscode/
 *.suo
 *.ntvs*
 *.njsproj
