--- a/Listy/server/package.json
+++ b/Listy/server/package.json
@@ -8,7 +8,9 @@
   },
   "keywords": [
     "list",
-    "express"
+    "express",
+    "CRUD",
+    "REST"
   ],
   "author": "Devin",
   "license": "ISC",
