--- a/Listy/client/package.json
+++ b/Listy/client/package.json
@@ -9,8 +9,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@mdi/font": "^2.2.43",
     "axios": "^0.18.0",
-    "bulma": "^0.6.2",
+    "buefy": "^0.6.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
